--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
@@ -106,44 +106,44 @@
 
 </article>
 
-<article class="tab default" id="leadership">
+    <article class="tab default" id="leadership">
 
-    {% spaceless %}
+        {% spaceless %}
 
-        <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
-            <section>
-                <h1>Sandra et Julien Dubi</h1>
+            <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/dubi.jpg') }}" alt="Marc Gallay"/>
+                <section>
+                    <h1>Sandra et Julien Dubi</h1>
 
-                <p>Couple pastoral du Gospel Center Annecy</p>
-            </section>
+                    <p>Couple pastoral du Gospel Center Annecy</p>
+                </section>
 
-        </article>
+            </article>
 
-        <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
-            <section>
-                <h1>Julie et Olivier Mussard </h1>
+            <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/mussard.jpg') }}" alt="Marc Gallay"/>
+                <section>
+                    <h1>Julie et Olivier Mussard </h1>
 
-                <p>Membres du conseil de direction</p>
-            </section>
+                    <p>Membres du conseil de direction</p>
+                </section>
 
-        </article>
+            </article>
 
-        <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
-            <section>
-                <h1>Elisabeth et Stéphane Potin</h1>
+            <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/potin.jpg') }}" alt="Marc Gallay"/>
+                <section>
+                    <h1>Elisabeth et Stéphane Potin</h1>
 
-                <p>Membres du conseil de direction</p>
-            </section>
+                    <p>Membres du conseil de direction</p>
+                </section>
 
-        </article>
+            </article>
 
 
-    {% endspaceless %}
+        {% endspaceless %}
 
-</article>
+    </article>
 
 <article class="tab default" id="staff">
 
