--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/youth.html.twig
@@ -171,24 +171,17 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <p>Tous les vendredis soirs</p>
+        <p>Le Gospel Youth Annecy c'est le groupe de jeunes du Gospel Center Annecy. On est des jeunes de 13 ans à 20
+            ans qui voulons découvrir des choses nouvelles et avancer dans notre relation avec Dieu.</p>
 
-        <p>Soirée à 19:30</p>
-
-        <p>After dès 21:30</p>
-
-        <p>Le Gospel Youth Lausanne c'est le groupe de jeunes du Gospel Center Lausanne. On est des jeunes de 13 ans à
-            20 ans qui voulons découvrir des choses nouvelles et avancer dans notre relation avec Dieu. On se retrouve
-            tous les vendredis soirs dès 19h30 dans les locaux du Gospel Center à Provence 4 à Lausanne. Passionnés,
+        <p>On se retrouve périodiquement le samedi dans la journée ou les vendredi soirs à l'espace 34. Passionnés,
             créatifs, et motivés, notre désir est de faire la différence dans ce monde en suivant l'exemple de
             Jésus!</p>
 
         <article class="frame">
             <h1>Plus d'infos</h1>
 
-            <p>sur notre page facebook</p>
-
-            <p><a href="https://www.facebook.com/GospelCenterAnnecyYouth" target="_blank">facebook.com/GospelCenterAnnecyYouth</a>
+            <p><a href="https://www.facebook.com/GospelCenterAnnecyYouth" target="_blank">sur notre page facebook</a>
             </p>
         </article>
 
