--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
@@ -111,7 +111,7 @@
     {% spaceless %}
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/dubi.jpg') }}" alt="Marc Gallay"/>
             <section>
                 <h1>Sandra et Julien Dubi</h1>
 
@@ -121,7 +121,7 @@
         </article>
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/mussard.jpg') }}" alt="Marc Gallay"/>
             <section>
                 <h1>Julie et Olivier Mussard </h1>
 
@@ -131,7 +131,7 @@
         </article>
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/potin.jpg') }}" alt="Marc Gallay"/>
             <section>
                 <h1>Elisabeth et Stéphane Potin</h1>
 
