--- a/app/Resources/views/footer_local.html.twig
+++ b/app/Resources/views/footer_local.html.twig
@@ -1,13 +1,15 @@
 <footer>
     <section class="social">
-        {% if center.ref == "lausanne" %}
-            <a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCLausanne"></a>
-            <a target="_blank" id="youtube" class="icon" href="https://www.youtube.com/channel/UC-xOsiKqDr_vx3Vl1GGycmg"></a>
-            <a target="_blank" id="gctv" class="icon" href="{{ path('gospelcenterMedia_center', {'center': center.ref}) }}"></a>
-        {% elseif center.ref == "annecy" %}
-            <a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCAnnecy"></a>
-        {% else %}
-        {% endif %}
+        <ul>
+            {% spaceless %}
+                {% include "::nav/social.html.twig" %}
+            {% endspaceless %}
+
+            {% if center.ref == "lausanne" %}
+                <li><a target="_blank" id="gctv" class="icon"
+                       href="{{ path('gospelcenterMedia_center', {'center': center.ref}) }}">Gospel Center TV</a></li>
+            {% endif %}
+        </ul>
     </section>
     <section class="container">
         <h1>A place where miracles happen!</h1>
