about page for Annecy bug fixed

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
@@ -27,91 +27,96 @@
 
 <section class="tab autoScroll">
 
-<nav class="sub_nav">
-    {% spaceless %}
-        <ul class="classic">
-            <li><a href="#about" class="current focus">{{ 'gc.page.about.nav.about'|trans }}</a></li>
-            <li><a href="#leadership">{{ 'gc.page.about.nav.leadership'|trans }}</a></li>
-            <li><a href="#staff">{{ 'gc.page.about.nav.staff'|trans }}</a></li>
-            <li><a href="#what-we-believe">{{ 'gc.page.about.nav.believe'|trans }}</a></li>
-        </ul>
-    {% endspaceless %}
-</nav>
+    <nav class="sub_nav">
+        {% spaceless %}
+            <ul class="classic">
+                <li><a href="#about" class="current focus">{{ 'gc.page.about.nav.about'|trans }}</a></li>
+                <li><a href="#leadership">{{ 'gc.page.about.nav.leadership'|trans }}</a></li>
+                <li><a href="#staff">{{ 'gc.page.about.nav.staff'|trans }}</a></li>
+                <li><a href="#what-we-believe">{{ 'gc.page.about.nav.believe'|trans }}</a></li>
+            </ul>
+        {% endspaceless %}
+    </nav>
 
-<article class="tab blog-style active" id="about">
+    <article class="tab blog-style active" id="about">
 
-    <h1>A place where miracles happen!</h1>
+        <h1>A place where miracles happen!</h1>
 
-    {% set aboutImg = 'bundles/gospelcenterpage/images/a-propos.jpg' %}
+        {% set aboutImg = 'bundles/gospelcenterpage/images/a-propos.jpg' %}
 
-    <img class="big"
-         src="{{ asset(aboutImg)| imagine_filter('blog_big_low') }}"
-         srcset="{{ asset(aboutImg)| imagine_filter('blog_big_low') }} 2x"
-         data-img="{{ asset(aboutImg)| imagine_filter('blog_big') }}"
-         data-img_2x="{{ asset(aboutImg)| imagine_filter('blog_big_2x') }}"
-         data-img_tablet="{{ asset(aboutImg)| imagine_filter('blog_big_tablet') }}"
-         data-img_tablet_2x="{{ asset(aboutImg)| imagine_filter('blog_big_tablet_2x') }}"
-         data-img_mobile="{{ asset(aboutImg)| imagine_filter('blog_big_mobile') }}"
-         data-img_mobile_2x="{{ asset(aboutImg)| imagine_filter('blog_big_mobile_2x') }}">
-
-
-    <h2 class="underline"><span>Qui</span></h2>
-
-    <p>Le Gospel Center Annecy est partenaire de la Fédération romande des Églises évangéliques (<a target="_blank"
-                                                                                                    href="http://www.lafree.ch">FREE</a>)
-        en Suisse et dépend du mouvement <a target="_blank" href="http://www.gospel-wave.org">Gospel Wave</a>.</p>
+        <img class="big"
+             src="{{ asset(aboutImg)| imagine_filter('blog_big_low') }}"
+             srcset="{{ asset(aboutImg)| imagine_filter('blog_big_low') }} 2x"
+             data-img="{{ asset(aboutImg)| imagine_filter('blog_big') }}"
+             data-img_2x="{{ asset(aboutImg)| imagine_filter('blog_big_2x') }}"
+             data-img_tablet="{{ asset(aboutImg)| imagine_filter('blog_big_tablet') }}"
+             data-img_tablet_2x="{{ asset(aboutImg)| imagine_filter('blog_big_tablet_2x') }}"
+             data-img_mobile="{{ asset(aboutImg)| imagine_filter('blog_big_mobile') }}"
+             data-img_mobile_2x="{{ asset(aboutImg)| imagine_filter('blog_big_mobile_2x') }}">
 
 
-    <h2 class="underline"><span>Comment</span></h2>
+        <h2 class="underline"><span>Qui</span></h2>
 
-    <p>Le Gospel Center a le désir de vivre l’Evangile de la façon la plus complète possible, y compris dans la
-        dimension de la guérison divine et du miraculeux.</p>
+        <p>Le Gospel Center Annecy est partenaire de la Fédération romande des Églises évangéliques (<a target="_blank"
+                                                                                                        href="http://www.lafree.ch">FREE</a>)
+            en Suisse et dépend du mouvement <a target="_blank" href="http://www.gospel-wave.org">Gospel Wave</a>.</p>
 
-    <p>Le Gospel Center a comme vision de communiquer avec des moyens modernes qui rejoignent les personnes dans
-        leur
-        réalité. Les médias, l’audiovisuel, ainsi que les activités mises en place poursuivent ce but.</p>
 
-    <p>Nous sommes convaincus de l’importance de la diversité des façons de vivre la foi et de la richesse
-        qu’apportent
-        les simples moments de vie partagés. Les célébrations du dimanche ne sont qu’une facette de la vie
-        chrétienne.</p>
+        <h2 class="underline"><span>Comment</span></h2>
 
-    <h2 class="underline"><span>Pourquoi</span></h2>
+        <p>Le Gospel Center a le désir de vivre l’Evangile de la façon la plus complète possible, y compris dans la
+            dimension de la guérison divine et du miraculeux.</p>
 
-    <p>Le Gospel Center existe dans le but de stimuler, développer et faire découvrir un mode de vie positif,
-        pratique, puissant, fondé sur Jésus au travers de la Bible. Nous croyons que la vie d’un chrétien ne
-        s’arrête pas aux dimanches ou aux programmes offerts par l’église mais se vit aussi le reste de la semaine
-        dans des activités diverses, dans nos lieux de vie respectifs et nos lieux de travail.</p>
+        <p>Le Gospel Center a comme vision de communiquer avec des moyens modernes qui rejoignent les personnes dans
+            leur
+            réalité. Les médias, l’audiovisuel, ainsi que les activités mises en place poursuivent ce but.</p>
 
-    <p>Le Gospel Center souhaite offrir un espace où la dimension de la communion fraternelle est un élément
-        central. Un espace où la foi de chacun peut grandir de manière saine et équilibrée, aussi bien dans la
-        dimension du faire que de l’être. Nous souhaitons voir Dieu agir au travers de miracles, de guérisons et de
-        vies transformées.</p>
+        <p>Nous sommes convaincus de l’importance de la diversité des façons de vivre la foi et de la richesse
+            qu’apportent
+            les simples moments de vie partagés. Les célébrations du dimanche ne sont qu’une facette de la vie
+            chrétienne.</p>
 
-    <h2 class="underline"><span>Structure</span></h2>
+        <h2 class="underline"><span>Pourquoi</span></h2>
 
-    <p>Le Gospel Center fonctionne pour et par ses « bases », qui sont le regroupement de 4 à 7 personnes par région
-        et centres d’intérêt. Le but est de proposer un lieu de taille accessible sur le plan relationnel où il est
-        possible d’avancer régulièrement et de manière personnelle dans sa maturité spirituelle. Les ”bases” mettent
-        l’accent aussi bien sur les moments de vie partagés (sport, sorties, activités culturelles, etc.) que sur
-        les temps d’échange autour de la Bible. Le Gospel Center veut offrir la possibilité à chaque personne de
-        s’investir selon ses capacités, son temps et sa motivation dans la vie de sa ”base” et par prolongement dans
-        ses diverses activités, dont la célébration du dimanche.</p>
+        <p>Le Gospel Center existe dans le but de stimuler, développer et faire découvrir un mode de vie positif,
+            pratique, puissant, fondé sur Jésus au travers de la Bible. Nous croyons que la vie d’un chrétien ne
+            s’arrête pas aux dimanches ou aux programmes offerts par l’église mais se vit aussi le reste de la semaine
+            dans des activités diverses, dans nos lieux de vie respectifs et nos lieux de travail.</p>
 
-    <h2 class="underline"><span>Finances</span></h2>
+        <p>Le Gospel Center souhaite offrir un espace où la dimension de la communion fraternelle est un élément
+            central. Un espace où la foi de chacun peut grandir de manière saine et équilibrée, aussi bien dans la
+            dimension du faire que de l’être. Nous souhaitons voir Dieu agir au travers de miracles, de guérisons et de
+            vies transformées.</p>
 
-    <p>Le Gospel Center Annecy ne bénéficie d’aucun soutien de l’État. C’est une association 1905 à but non lucratif.
-        L’ensemble des frais de fonctionnement est assumé par l’engagement libre de chacun. Nos comptes sont approuvés
-        par l’Assemblée générale après vérification par <a target="_blank" href="http://www.actes6.com">Actes6</a>.</p>
+        <h2 class="underline"><span>Structure</span></h2>
 
-</article>
+        <p>Le Gospel Center fonctionne pour et par ses « bases », qui sont le regroupement de 4 à 7 personnes par région
+            et centres d’intérêt. Le but est de proposer un lieu de taille accessible sur le plan relationnel où il est
+            possible d’avancer régulièrement et de manière personnelle dans sa maturité spirituelle. Les ”bases” mettent
+            l’accent aussi bien sur les moments de vie partagés (sport, sorties, activités culturelles, etc.) que sur
+            les temps d’échange autour de la Bible. Le Gospel Center veut offrir la possibilité à chaque personne de
+            s’investir selon ses capacités, son temps et sa motivation dans la vie de sa ”base” et par prolongement dans
+            ses diverses activités, dont la célébration du dimanche.</p>
+
+        <h2 class="underline"><span>Finances</span></h2>
+
+        <p>Le Gospel Center Annecy ne bénéficie d’aucun soutien de l’État. C’est une association 1905 à but non
+            lucratif.
+            L’ensemble des frais de fonctionnement est assumé par l’engagement libre de chacun. Nos comptes sont
+            approuvés
+            par l’Assemblée générale après vérification par <a target="_blank" href="http://www.actes6.com">Actes6</a>.
+        </p>
+
+    </article>
 
     <article class="tab default" id="leadership">
 
         {% spaceless %}
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/dubi.jpg') }}" alt="Marc Gallay"/>
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/dubi.jpg') }}"
+                     alt="Sandra et Julien Dubi"/>
                 <section>
                     <h1>Sandra et Julien Dubi</h1>
 
@@ -121,9 +126,11 @@
             </article>
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/mussard.jpg') }}" alt="Marc Gallay"/>
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/mussard.jpg') }}"
+                     alt="Julie et Olivier Mussard"/>
                 <section>
-                    <h1>Julie et Olivier Mussard </h1>
+                    <h1>Julie et Olivier Mussard</h1>
 
                     <p>Membres du conseil de direction</p>
                 </section>
@@ -131,7 +138,9 @@
             </article>
 
             <article class="people">
-                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/potin.jpg') }}" alt="Marc Gallay"/>
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/potin.jpg') }}"
+                     alt="Elisabeth et Stéphane Potin"/>
                 <section>
                     <h1>Elisabeth et Stéphane Potin</h1>
 
@@ -145,86 +154,86 @@
 
     </article>
 
-<article class="tab default" id="staff">
+    <article class="tab default" id="staff">
 
-    <h2 class="slogan">Le staff du Gospel Center Annecy est une équipe
-        dynamique qui désire effectuer un travail de qualité.</h2>
+        <h2 class="slogan">Le staff du Gospel Center Annecy est une équipe
+            dynamique qui désire effectuer un travail de qualité.</h2>
 
-    <article class="frame">
-        <h1>équipe pastorale</h1>
+        <article class="frame">
+            <h1>équipe pastorale</h1>
 
-        <p>Sandra Dubi</p>
+            <p>Sandra Dubi</p>
+        </article>
+
+        <article class="frame">
+            <h1>Les bases</h1>
+
+            <p>Julien Dubi</p>
+        </article>
+
+        <article class="frame">
+            <h1>Enfance</h1>
+
+            <p>Marie Béatrice Sciabbarrasi</p>
+        </article>
+
+        <article class="frame">
+            <h1>Louange</h1>
+
+            <p>Olivier Mussard</p>
+        </article>
+
+        <article class="frame">
+            <h1>Accueil</h1>
+
+            <p>Julie Mussard</p>
+        </article>
+
+        <article class="frame">
+            <h1>Prayer Impact</h1>
+
+            <p>Karine Nelzi</p>
+        </article>
+
+        <article class="frame">
+            <h1>équipe SOZO</h1>
+
+            <p>Sandra Dubi</p>
+        </article>
+
+
     </article>
 
-    <article class="frame">
-        <h1>Les bases</h1>
+    <article class="tab blog-style" id="what-we-believe">
 
-        <p>Julien Dubi</p>
+        <h1>Ce que nous croyons</h1>
+
+        {% set believeImg = 'bundles/gospelcenterpage/images/confession.jpg' %}
+
+        <img class="big"
+             src="{{ asset(believeImg)| imagine_filter('blog_big_low') }}"
+             srcset="{{ asset(believeImg)| imagine_filter('blog_big_low') }} 2x"
+             data-img="{{ asset(believeImg)| imagine_filter('blog_big') }}"
+             data-img_2x="{{ asset(believeImg)| imagine_filter('blog_big_2x') }}"
+             data-img_tablet="{{ asset(believeImg)| imagine_filter('blog_big_tablet') }}"
+             data-img_tablet_2x="{{ asset(believeImg)| imagine_filter('blog_big_tablet_2x') }}"
+             data-img_mobile="{{ asset(believeImg)| imagine_filter('blog_big_mobile') }}"
+             data-img_mobile_2x="{{ asset(believeImg)| imagine_filter('blog_big_mobile_2x') }}">
+
+        <p>Nous croyons que la Bible est inspirée par Dieu. La Parole de Dieu est la base unique de notre foi, de notre
+            doctrine, et conduit nos actions.</p>
+
+        <p>Nous croyons au Dieu unique qui existe en trois identités distinctes : le Père, Son fils Jésus-Christ et le
+            Saint-Esprit.</p>
+
+        <p>Nous croyons que tous les hommes ont péché et sont séparés de la gloire de Dieu. Nous croyons au salut des
+            pécheurs par la grâce, au travers de la repentance et de la foi en l’œuvre parfaite et suffisante du
+            sacrifice de Jésus à la croix.</p>
+
+        <p>Nous croyons en l’Eglise, non en tant qu’institution humaine mais comme le rassemblement des croyants autour
+            du chef de celle-ci: Jésus-Christ.</p>
+
     </article>
-
-    <article class="frame">
-        <h1>Enfance</h1>
-
-        <p>Marie Béatrice Sciabbarrasi</p>
-    </article>
-
-    <article class="frame">
-        <h1>Louange</h1>
-
-        <p>Olivier Mussard</p>
-    </article>
-
-    <article class="frame">
-        <h1>Accueil</h1>
-
-        <p>Julie Mussard</p>
-    </article>
-
-    <article class="frame">
-        <h1>Prayer Impact</h1>
-
-        <p>Karine Nelzi</p>
-    </article>
-
-    <article class="frame">
-        <h1>équipe SOZO</h1>
-
-        <p>Sandra Dubi</p>
-    </article>
-
-
-</article>
-
-<article class="tab blog-style" id="what-we-believe">
-
-    <h1>Ce que nous croyons</h1>
-
-    {% set believeImg = 'bundles/gospelcenterpage/images/confession.jpg' %}
-
-    <img class="big"
-         src="{{ asset(believeImg)| imagine_filter('blog_big_low') }}"
-         srcset="{{ asset(believeImg)| imagine_filter('blog_big_low') }} 2x"
-         data-img="{{ asset(believeImg)| imagine_filter('blog_big') }}"
-         data-img_2x="{{ asset(believeImg)| imagine_filter('blog_big_2x') }}"
-         data-img_tablet="{{ asset(believeImg)| imagine_filter('blog_big_tablet') }}"
-         data-img_tablet_2x="{{ asset(believeImg)| imagine_filter('blog_big_tablet_2x') }}"
-         data-img_mobile="{{ asset(believeImg)| imagine_filter('blog_big_mobile') }}"
-         data-img_mobile_2x="{{ asset(believeImg)| imagine_filter('blog_big_mobile_2x') }}">
-
-    <p>Nous croyons que la Bible est inspirée par Dieu. La Parole de Dieu est la base unique de notre foi, de notre
-        doctrine, et conduit nos actions.</p>
-
-    <p>Nous croyons au Dieu unique qui existe en trois identités distinctes : le Père, Son fils Jésus-Christ et le
-        Saint-Esprit.</p>
-
-    <p>Nous croyons que tous les hommes ont péché et sont séparés de la gloire de Dieu. Nous croyons au salut des
-        pécheurs par la grâce, au travers de la repentance et de la foi en l’œuvre parfaite et suffisante du
-        sacrifice de Jésus à la croix.</p>
-
-    <p>Nous croyons en l’Eglise, non en tant qu’institution humaine mais comme le rassemblement des croyants autour
-        du chef de celle-ci: Jésus-Christ.</p>
-
-</article>
 
 
 </section>
