--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
@@ -111,7 +111,7 @@
     {% spaceless %}
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/dubi.jpg') }}" alt="Marc Gallay"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/dubi.jpg') }}" alt="Sandra et Julien Dubi"/>
             <section>
                 <h1>Sandra et Julien Dubi</h1>
 
@@ -121,9 +121,9 @@
         </article>
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/mussard.jpg') }}" alt="Marc Gallay"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/mussard.jpg') }}" alt="Julie et Olivier Mussard"/>
             <section>
-                <h1>Julie et Olivier Mussard </h1>
+                <h1>Julie et Olivier Mussard</h1>
 
                 <p>Membres du conseil de direction</p>
             </section>
@@ -131,7 +131,7 @@
         </article>
 
         <article class="people">
-            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/potin.jpg') }}" alt="Marc Gallay"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/annecy/potin.jpg') }}" alt="Elisabeth et Stéphane Potin"/>
             <section>
                 <h1>Elisabeth et Stéphane Potin</h1>
 
