about page bug fixed

--- a/web/sass/advanced/_about.scss
+++ b/web/sass/advanced/_about.scss
@@ -178,6 +178,7 @@
                     margin: 5px 0 0;
 
                     left: inherit;
+                    right: inherit;
                     position: relative;
 
                     h1 {
