error page bug fixed

--- a/web/sass/_header.scss
+++ b/web/sass/_header.scss
@@ -453,7 +453,7 @@
         }
 
         nav.main {
-            position: static;
+            //position: static;
             top: inherit;
 
             #get_ruban {
