--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -22,19 +22,10 @@
         <nav class="main">
             <a id="logo" href="/"></a>
             <ul class="nav">
-                <li class="home"><a href="/">Gospel Center</a></li>
-                <li>
-                    <a href="/lausanne">Lausanne</a>
-                </li>
-                <li>
-                    <a href="/montreux">Montreux</a>
-                </li>
-                <li>
-                    <a href="/jura">Jura</a>
-                </li>
-                <li>
-                    <a href="/annecy">Annecy</a>
-                </li>
+                {#<li class="home"><a href="/">Gospel Center</a></li>#}
+                {% spaceless %}
+                    {% include "::nav/centers.html.twig" %}
+                {% endspaceless %}
             </ul>
             <a id="get_nav" href=""></a>
         </nav>
