add Google analytics

--- a/app/Resources/views/layoutNew.html.twig
+++ b/app/Resources/views/layoutNew.html.twig
@@ -16,45 +16,45 @@
 
     {% block javascripts %}
 
-    {% if center %}
+        {% if center %}
         {% if center.ref = "lausanne" %}
-                <script>
-                    (function (i, s, o, g, r, a, m) {
-                        i['GoogleAnalyticsObject'] = r;
-                        i[r] = i[r] || function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date();
-                        a = s.createElement(o),
-                                m = s.getElementsByTagName(o)[0];
-                        a.async = 1;
-                        a.src = g;
-                        m.parentNode.insertBefore(a, m)
-                    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-                    ga('create', 'UA-60150028-3', 'auto');
-                    ga('send', 'pageview');
+            ga('create', 'UA-60150028-3', 'auto');
+            ga('send', 'pageview');
 
-                </script>
-        {% elseif %}
-                <script>
-                    (function (i, s, o, g, r, a, m) {
-                        i['GoogleAnalyticsObject'] = r;
-                        i[r] = i[r] || function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date();
-                        a = s.createElement(o),
-                                m = s.getElementsByTagName(o)[0];
-                        a.async = 1;
-                        a.src = g;
-                        m.parentNode.insertBefore(a, m)
-                    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        </script>
+        {% elseif center.ref = "annecy" %}
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-                    ga('create', 'UA-60150028-4', 'auto');
-                    ga('send', 'pageview');
+            ga('create', 'UA-60150028-4', 'auto');
+            ga('send', 'pageview');
 
-                </script>
+        </script>
         {% endif %}
-    {% else if page = "tv" %}
+        {% else if page = "tv" %}
         <script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -72,9 +72,9 @@
             ga('send', 'pageview');
 
         </script>
-    {% endif %}
+        {% endif %}
 
-    <script type="text/javascript" src="{{ asset('js/processed/mainNew.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/processed/mainNew.min.js') }}"></script>
     {% endblock %}
 
     {% block jsTemplating %}
